// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCardSelectors should error on a product ID without a product ID provided: rhelGraphCard: no product id error 1`] = `
Object {
  "error": undefined,
  "errorStatus": undefined,
  "fulfilled": undefined,
  "graphData": Object {
    "cores": Array [],
    "hypervisorCores": Array [],
    "hypervisorSockets": Array [],
    "physicalCores": Array [],
    "physicalSockets": Array [],
    "sockets": Array [],
    "threshold": Array [],
  },
  "initialLoad": true,
  "pending": undefined,
}
`;

exports[`GraphCardSelectors should error on a product ID without granularity provided: rhelGraphCard: no granularity error 1`] = `
Object {
  "error": undefined,
  "errorStatus": undefined,
  "fulfilled": undefined,
  "graphData": Object {
    "cores": Array [],
    "hypervisorCores": Array [],
    "hypervisorSockets": Array [],
    "physicalCores": Array [],
    "physicalSockets": Array [],
    "sockets": Array [],
    "threshold": Array [],
  },
  "initialLoad": true,
  "pending": undefined,
}
`;

exports[`GraphCardSelectors should error on missing a reducer response: rhelGraphCard: missing reducer error 1`] = `
Object {
  "error": undefined,
  "errorStatus": undefined,
  "fulfilled": undefined,
  "graphData": Object {
    "cores": Array [],
    "hypervisorCores": Array [],
    "hypervisorSockets": Array [],
    "physicalCores": Array [],
    "physicalSockets": Array [],
    "sockets": Array [],
    "threshold": Array [],
  },
  "initialLoad": true,
  "pending": undefined,
}
`;

exports[`GraphCardSelectors should handle pending state on a product ID: rhelGraphCard: pending 1`] = `
Object {
  "error": undefined,
  "errorStatus": undefined,
  "fulfilled": undefined,
  "graphData": Object {
    "cores": Array [],
    "hypervisorCores": Array [],
    "hypervisorSockets": Array [],
    "physicalCores": Array [],
    "physicalSockets": Array [],
    "sockets": Array [],
    "threshold": Array [],
  },
  "graphGranularity": "daily",
  "initialLoad": true,
  "pending": true,
}
`;

exports[`GraphCardSelectors should map a fulfilled product ID response to an aggregated output: rhelGraphCard: fulfilled granularity 1`] = `
Object {
  "error": undefined,
  "errorStatus": undefined,
  "fulfilled": true,
  "graphData": Object {
    "cores": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 2,
      },
      Object {
        "date": 2019-09-05T00:00:00.000Z,
        "x": 1,
        "y": 2,
      },
      Object {
        "date": 2019-09-06T00:00:00.000Z,
        "x": 2,
        "y": 4,
      },
    ],
    "hypervisorCores": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
      Object {
        "date": 2019-09-05T00:00:00.000Z,
        "x": 1,
        "y": 1,
      },
      Object {
        "date": 2019-09-06T00:00:00.000Z,
        "x": 2,
        "y": 2,
      },
    ],
    "hypervisorSockets": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
      Object {
        "date": 2019-09-05T00:00:00.000Z,
        "x": 1,
        "y": 1,
      },
      Object {
        "date": 2019-09-06T00:00:00.000Z,
        "x": 2,
        "y": 2,
      },
    ],
    "physicalCores": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
      Object {
        "date": 2019-09-05T00:00:00.000Z,
        "x": 1,
        "y": 1,
      },
      Object {
        "date": 2019-09-06T00:00:00.000Z,
        "x": 2,
        "y": 2,
      },
    ],
    "physicalSockets": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
      Object {
        "date": 2019-09-05T00:00:00.000Z,
        "x": 1,
        "y": 1,
      },
      Object {
        "date": 2019-09-06T00:00:00.000Z,
        "x": 2,
        "y": 2,
      },
    ],
    "sockets": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 2,
      },
      Object {
        "date": 2019-09-05T00:00:00.000Z,
        "x": 1,
        "y": 2,
      },
      Object {
        "date": 2019-09-06T00:00:00.000Z,
        "x": 2,
        "y": 4,
      },
    ],
    "threshold": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 100,
      },
      Object {
        "date": 2019-09-05T00:00:00.000Z,
        "x": 1,
        "y": 0,
      },
      Object {
        "date": 2019-09-06T00:00:00.000Z,
        "x": 2,
        "y": 100,
      },
    ],
  },
  "graphGranularity": "daily",
  "initialLoad": false,
  "pending": false,
}
`;

exports[`GraphCardSelectors should populate data from the in memory cache: granularity cached data: ERROR, no component reportCapacity mismatch 1`] = `
Object {
  "error": undefined,
  "errorStatus": undefined,
  "fulfilled": true,
  "graphData": Object {
    "cores": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 2,
      },
    ],
    "hypervisorCores": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
    ],
    "hypervisorSockets": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
    ],
    "physicalCores": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
    ],
    "physicalSockets": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
    ],
    "sockets": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 2,
      },
    ],
    "threshold": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 100,
      },
    ],
  },
  "initialLoad": false,
  "pending": false,
}
`;

exports[`GraphCardSelectors should populate data from the in memory cache: granularity cached data: cached data 1`] = `
Object {
  "error": undefined,
  "errorStatus": undefined,
  "fulfilled": true,
  "graphData": Object {
    "cores": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 2,
      },
    ],
    "hypervisorCores": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
    ],
    "hypervisorSockets": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
    ],
    "physicalCores": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
    ],
    "physicalSockets": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
    ],
    "sockets": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 2,
      },
    ],
    "threshold": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 100,
      },
    ],
  },
  "graphGranularity": "daily",
  "initialLoad": false,
  "pending": false,
}
`;

exports[`GraphCardSelectors should populate data from the in memory cache: granularity cached data: component and reportCapacity match 1`] = `
Object {
  "error": undefined,
  "errorStatus": undefined,
  "fulfilled": true,
  "graphData": Object {
    "cores": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 2,
      },
    ],
    "hypervisorCores": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
    ],
    "hypervisorSockets": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
    ],
    "physicalCores": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
    ],
    "physicalSockets": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
    ],
    "sockets": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 2,
      },
    ],
    "threshold": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 100,
      },
    ],
  },
  "graphGranularity": "daily",
  "initialLoad": false,
  "pending": false,
}
`;

exports[`GraphCardSelectors should populate data on a product ID when the api response is missing expected properties: rhelGraphCard: data populated, missing properties 1`] = `
Object {
  "error": undefined,
  "errorStatus": undefined,
  "fulfilled": true,
  "graphData": Object {
    "cores": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 0,
      },
      Object {
        "date": 2019-09-05T00:00:00.000Z,
        "x": 1,
        "y": 0,
      },
      Object {
        "date": 2019-09-06T00:00:00.000Z,
        "x": 2,
        "y": 0,
      },
    ],
    "hypervisorCores": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 0,
      },
      Object {
        "date": 2019-09-05T00:00:00.000Z,
        "x": 1,
        "y": 0,
      },
      Object {
        "date": 2019-09-06T00:00:00.000Z,
        "x": 2,
        "y": 0,
      },
    ],
    "hypervisorSockets": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 0,
      },
      Object {
        "date": 2019-09-05T00:00:00.000Z,
        "x": 1,
        "y": 1,
      },
      Object {
        "date": 2019-09-06T00:00:00.000Z,
        "x": 2,
        "y": 0,
      },
    ],
    "physicalCores": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 0,
      },
      Object {
        "date": 2019-09-05T00:00:00.000Z,
        "x": 1,
        "y": 0,
      },
      Object {
        "date": 2019-09-06T00:00:00.000Z,
        "x": 2,
        "y": 0,
      },
    ],
    "physicalSockets": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
      Object {
        "date": 2019-09-05T00:00:00.000Z,
        "x": 1,
        "y": 0,
      },
      Object {
        "date": 2019-09-06T00:00:00.000Z,
        "x": 2,
        "y": 2,
      },
    ],
    "sockets": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 2,
      },
      Object {
        "date": 2019-09-05T00:00:00.000Z,
        "x": 1,
        "y": 2,
      },
      Object {
        "date": 2019-09-06T00:00:00.000Z,
        "x": 2,
        "y": 4,
      },
    ],
    "threshold": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 100,
      },
      Object {
        "date": 2019-09-05T00:00:00.000Z,
        "x": 1,
        "y": 0,
      },
      Object {
        "date": 2019-09-06T00:00:00.000Z,
        "x": 2,
        "y": 100,
      },
    ],
  },
  "graphGranularity": "daily",
  "initialLoad": false,
  "pending": false,
}
`;

exports[`GraphCardSelectors should populate data on a product ID when the api response provided mismatches index or date: rhelGraphCard: data populated on mismatch fulfilled 1`] = `
Object {
  "error": undefined,
  "errorStatus": undefined,
  "fulfilled": true,
  "graphData": Object {
    "cores": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 2,
      },
    ],
    "hypervisorCores": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
    ],
    "hypervisorSockets": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
    ],
    "physicalCores": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
    ],
    "physicalSockets": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 1,
      },
    ],
    "sockets": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 2,
      },
    ],
    "threshold": Array [
      Object {
        "date": 2019-09-04T00:00:00.000Z,
        "x": 0,
        "y": 0,
      },
    ],
  },
  "graphGranularity": "daily",
  "initialLoad": false,
  "pending": false,
}
`;

exports[`GraphCardSelectors should return specific selectors: selectors 1`] = `
Object {
  "graphCard": [Function],
  "makeGraphCard": [Function],
}
`;
